Add install command to CMakeLists.txt files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.4)
 
 find_package(Threads REQUIRED)
 
@@ -17,3 +17,4 @@ set(LIB_NAME gpio)
 add_library(${LIB_NAME} STATIC src/gpio.cpp)
 target_include_directories(${LIB_NAME} PUBLIC include)
 target_link_libraries(${LIB_NAME} ${CMAKE_THREAD_LIBS_INIT})
+install(TARGETS ${LIB_NAME} DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/bin)
