--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.4)
 
 find_package(Threads REQUIRED)
 
@@ -18,3 +18,4 @@ include_directories(../include)
 set(SOURCE ../src/gpio.cpp test.cpp)
 add_executable(testbench ${SOURCE})
 target_link_libraries(testbench ${CMAKE_THREAD_LIBS_INIT})
+install(TARGETS testbench RUNTIME DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/bin)
