Small changes in file test/CMakeLists.txt

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -18,4 +18,4 @@ include_directories(../include)
 set(SOURCE ../src/gpio.cpp test.cpp)
 add_executable(testbench ${SOURCE})
 target_link_libraries(testbench ${CMAKE_THREAD_LIBS_INIT})
-install(TARGETS testbench RUNTIME DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/bin)
+install(TARGETS testbench DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/bin)
